tests/application/access-policy-retry/first.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: first
spec:
  image: nginxinc/nginx-unprivileged:latest
  port: 8080
  accessPolicy:
    inbound:
      rules:
        - application: second
    outbound:
      rules:
        - application: second
