tests/application/access-policy-retry/second.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: second
spec:
  image: nginxinc/nginx-unprivileged:latest
  port: 8080
  accessPolicy:
    inbound:
      rules:
        - application: first
    outbound:
      rules:
        - application: first
